fixing css linking

--- a/One_Page_Website/one_page_website.html
+++ b/One_Page_Website/one_page_website.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Upgrade Your Windows 10</title>
-		<link rel="stylesheet" href="C:\Users\BohusSERVER\OneDrive\Documents\GitHub\HTML & CSS Learning\Basic_HTML_and_CSS\One_page_Website\css\styles.css">
+		<link rel="stylesheet" href="C:\Users\BohusSERVER\OneDrive\Documents\GitHub\Personal-portfolio\One_Page_Website\css\styles.css">
 	</head>
 	<body>
 		<div class="whole_body">
