css link update

--- a/One_Page_Website/one_page_website.html
+++ b/One_Page_Website/one_page_website.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Upgrade Your Windows 10</title>
-		<link rel="stylesheet" href="C:\Users\BohusSERVER\OneDrive\Documents\GitHub\Personal-portfolio\One_Page_Website\css\styles.css">
+		<link rel="stylesheet" href="./css/styles.css">
 	</head>
 	<body>
 		<div class="whole_body">
@@ -33,7 +33,7 @@
 				<!-- ABOUT -->
 				<section id="about">
 					<div class="move">
-						<h1>Windows 10 support end in 2025</h1>
+						<h1>Windows 10 support ends in 2025</h1>
 						<span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</span>
 					</div>
 				</section>
