--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </q>
                     <br> -Joseph Weizenbaum
                     <br>
-                    <br> My name is ____. Welcome to my portfolio website. On it, I will tell you about my background and experience.
+                    <br> My name is Bohumil. Welcome to my portfolio website. On it, I will tell you about my background and experience.
                     <br>
                     <br> Thank you for stopping by and enjoy! 
                 </p>
@@ -60,11 +60,11 @@
             <div class="Column_1">
                 <h1>About</h1>
                 <p>
-                    I am a software developer who loves to code! As a father of two, I enjoy time with my family and traveling. 
+                    I am a web developer who loves to code! I'm happily married and enjoy traveling and exploring new ideas in tech. 
                     <br>
-                    <br>I am a graduate of <a href="https://www.learncodinganywhere.com" rel="noopener" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more. 
+                    <br>I am a graduate of <a href="https://www.pitman-training.com/" rel="noopener" target="_blank">Pitman Training</a>’s Web Developer Diploma, and trained and experienced in the following programming languages: HTML, CSS and Bootstrap, JavaScript, and more. 
                     <br>
-                    <br>I am a full-stack developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!
+                    <br>I am a front-end web developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!
                 </p>
             </div>
         </div>
