--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <p>
                     You can view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/the-tech-academy" rel="noopener" target="_blank">The Tech Academy Github</a></p>
+                    <p class="center"><a href="https://github.com/bohumil-kolouch/Personal-portfolio" rel="noopener" target="_blank">Personal-portfolio</a></p>
                 </p>
             </div>
             <!--Right column-->
@@ -111,7 +111,9 @@
         <!--Footer section-->
         <footer>
             <p>
-                <p class="center">&copy Prosper Consulting Inc., <a href="https://www.learncodinganywhere.com/" rel="noopener" target="_blank">The Tech Academy</a></p>
+                <p class="center">BK Consulting  
+                    <br>&copy 2025
+                </a></p>
                 <br>
             </p>
         </footer>
