--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!--Video text-->
         <div class="Video_Text">
-            <h1 class="white-text">Your Name's Portfolio</h1>
+            <h1 class="white-text">Bohumil's Portfolio</h1>
             <strong>
                 <p class="center">
                     <q>The computer programmer is a creator of universes for which he alone is the lawgiver.
@@ -54,7 +54,7 @@
         <div class="Row" id="About">
             <!--Left column-->
             <div class="Column_2">
-                <img src="images/html_custom.png" alt="Replace with your own image and description">
+                <img src="images/Profile_photo.jpg" alt="Photo of Bohumil">
             </div>
             <!--Right column-->
             <div class="Column_1">
