--- a/index.html
+++ b/index.html
@@ -34,14 +34,9 @@
 
         <!--Video text-->
         <div class="Video_Text">
-            <h1 class="white-text">Bohumil's Portfolio</h1>
-            <strong>
                 <p class="center">
-                    <q>The computer programmer is a creator of universes for which he alone is the lawgiver.
-                        <br>No playwright, no stage director, no emperor, however powerful, has ever exercised such absolute authority to arrange a stage or
-                        <br>field of battle and to command such unswervingly dutiful actors or troops.
-                    </q>
-                    <br> -Joseph Weizenbaum
+                    <q>The best way to predict the future is to invent it.</q>
+                    <br> -Peter Drucker
                     <br>
                     <br> My name is Bohumil. Welcome to my portfolio website. On it, I will tell you about my background and experience.
                     <br>
