--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" />
-        <title>Your Name Here</title>
+        <title>Bohumil Kolouch - Web Developer</title>
         <link rel="stylesheet" type="text/css" href="stylesheet/portfolio.css">
     </head>
 
@@ -55,7 +55,7 @@
             <div class="Column_1">
                 <h1>About</h1>
                 <p>
-                    I am a web developer who loves to code! I'm happily married and enjoy traveling and exploring new ideas in tech. 
+                    I'm a passionate web developer, happily married, with a love for traveling and exploring new tech ideas. 
                     <br>
                     <br>I am a graduate of <a href="https://www.pitman-training.com/" rel="noopener" target="_blank">Pitman Training</a>’s Web Developer Diploma, and trained and experienced in the following programming languages: HTML, CSS and Bootstrap, JavaScript, and more. 
                     <br>
@@ -69,11 +69,10 @@
             <!--Left column-->
             <div class="Column_1">
                 <h1>GitHub</h1>
-                <p>
-                    You can view my coding projects on my GitHub profile here:
-                    <br>
-                    <p class="center"><a href="https://github.com/bohumil-kolouch/Personal-portfolio" rel="noopener" target="_blank">Personal-portfolio</a></p>
-                </p>
+                <p>Explore my coding projects on GitHub:</p>
+                    <p class="center">
+                        <a href="https://github.com/bohumil-kolouch/" rel="noopener" target="_blank">My projects portfolio</a>
+                    </p>
             </div>
             <!--Right column-->
             <div class="Column_2">
@@ -85,13 +84,13 @@
         <div class="Row" id="Contact">
             <!--Contact image, left column-->
             <div class="Column_2 Column_tall">
-                <img src="images/html_custom.png" alt="Contact_Image">
+                <img src="images/html_css_java.jpg" alt="html, css, java">
             </div>
             <!--Contact form, right column-->
             <div class="Column_1 Column_tall">
                 <h1>Contact</h1>
                 <!--This specifies where and how to send the form data; we are leaving it blank-->
-                <form action="" method="POST"> <!-- Here we are utilizing a 3rd party service to submit the contact form data, insert your formspree endpoint in the action attribute -->
+                <form action="https://formspree.io/f/mdkzzzjo" method="POST"> <!-- Here we are utilizing a 3rd party service to submit the contact form data, insert your formspree endpoint in the action attribute -->
                     <label>Name:</label>
                         <input type="text" placeholder="Please enter your name here">
                     <label>Email:</label>
