--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <!--Right column-->
             <div class="Column_1">
                 <h1>About</h1>
-                <p>
+                <p class="center">
                     I'm a passionate web developer, happily married, with a love for traveling and exploring new tech ideas. 
                     <br>
                     <br>I am a graduate of <a href="https://www.pitman-training.com/" rel="noopener" target="_blank">Pitman Training</a>’s Web Developer Diploma, and trained and experienced in the following programming languages: HTML, CSS and Bootstrap, JavaScript, and more. 
@@ -76,7 +76,7 @@
             </div>
             <!--Right column-->
             <div class="Column_2">
-                <a href="https://github.com/the-tech-academy" rel="noopener" target="_blank"><img src="images/GitHub.png" alt="GitHub Logo"></a>
+                <a href="https://github.com/bohumil-kolouch/" rel="noopener" target="_blank"><img src="images/GitHub.png" alt="GitHub Logo"></a>
             </div>
         </div>
 
